src/parser.output
Terminals unused in grammar

    STRING_LITERAL
    SIZEOF
    PTR_OP
    TYPE_NAME
    TYPEDEF
    EXTERN
    STATIC
    AUTO
    REGISTER
    VOLATILE
    STRUCT
    UNION
    ENUM
    ELLIPSIS
    GOTO


State 37 conflicts: 27 shift/reduce
State 38 conflicts: 27 shift/reduce
State 44 conflicts: 27 shift/reduce
State 101 conflicts: 27 shift/reduce
State 102 conflicts: 27 shift/reduce
State 103 conflicts: 27 shift/reduce
State 104 conflicts: 27 shift/reduce
State 105 conflicts: 27 shift/reduce
State 106 conflicts: 27 shift/reduce
State 107 conflicts: 27 shift/reduce
State 108 conflicts: 27 shift/reduce
State 109 conflicts: 27 shift/reduce
State 110 conflicts: 27 shift/reduce
State 111 conflicts: 27 shift/reduce
State 112 conflicts: 27 shift/reduce
State 113 conflicts: 27 shift/reduce
State 114 conflicts: 27 shift/reduce
State 115 conflicts: 27 shift/reduce
State 116 conflicts: 27 shift/reduce
State 117 conflicts: 27 shift/reduce
State 118 conflicts: 27 shift/reduce
State 119 conflicts: 27 shift/reduce
State 120 conflicts: 27 shift/reduce
State 121 conflicts: 27 shift/reduce
State 122 conflicts: 27 shift/reduce
State 123 conflicts: 27 shift/reduce
State 124 conflicts: 27 shift/reduce
State 125 conflicts: 27 shift/reduce
State 126 conflicts: 2 shift/reduce
State 127 conflicts: 2 shift/reduce


Grammar

    0 $accept: ROOT $end

    1 ROOT: OUTPUT

    2 OUTPUT: HEADS

    3 HEADS: HEADS HEAD
    4      | HEAD

    5 HEAD: DATA_TYPES IDENTIFIER '(' ')' ';'
    6     | DATA_TYPES IDENTIFIER '(' PARAMETER ')' ';'
    7     | DATA_TYPES IDENTIFIER '(' ')' BLOCK
    8     | DATA_TYPES IDENTIFIER '(' PARAMETER ')' BLOCK

    9 PARAMETER: PARAMETER ',' DECLARATION
   10          | DECLARATION

   11 BLOCK: '{' BODY '}'
   12      | '{' '}'

   13 BODY: LINE BODY
   14     | LINE

   15 LINE: STATEMENT ';'
   16     | DECLARATION ';'
   17     | IF_ELSE_SWITCH
   18     | LOOP

   19 STATEMENT: RETURN EXPR
   20          | RETURN
   21          | CONTINUE
   22          | BREAK

   23 DECLARATION: IDENTIFIER '=' EXPR
   24            | DATA_TYPES IDENTIFIER
   25            | DATA_TYPES IDENTIFIER '=' EXPR
   26            | EXPR

   27 EXPR: TERM
   28     | EXPR '+' EXPR
   29     | EXPR '-' EXPR
   30     | EXPR '>' EXPR
   31     | EXPR '<' EXPR
   32     | EXPR NE_OP EXPR
   33     | EXPR EQ_OP EXPR
   34     | EXPR GE_OP EXPR
   35     | EXPR LE_OP EXPR
   36     | EXPR OR_OP EXPR
   37     | EXPR AND_OP EXPR
   38     | '!' EXPR
   39     | EXPR RIGHT_ASSIGN EXPR
   40     | EXPR LEFT_ASSIGN EXPR
   41     | EXPR ADD_ASSIGN EXPR
   42     | EXPR SUB_ASSIGN EXPR
   43     | EXPR MUL_ASSIGN EXPR
   44     | EXPR DIV_ASSIGN EXPR
   45     | EXPR MOD_ASSIGN EXPR
   46     | EXPR AND_ASSIGN EXPR
   47     | EXPR XOR_ASSIGN EXPR
   48     | EXPR OR_ASSIGN EXPR
   49     | EXPR '&' EXPR
   50     | EXPR '|' EXPR
   51     | EXPR '^' EXPR
   52     | EXPR RIGHT_OP EXPR
   53     | EXPR LEFT_OP EXPR
   54     | EXPR INC_OP
   55     | INC_OP EXPR
   56     | EXPR DEC_OP
   57     | DEC_OP EXPR

   58 TERM: UNARY
   59     | TERM '*' TERM
   60     | TERM '/' TERM

   61 UNARY: FACTOR
   62      | '-' FACTOR

   63 FACTOR: CONSTANT
   64       | '(' EXPR ')'
   65       | IDENTIFIER
   66       | IDENTIFIER '(' ')'
   67       | IDENTIFIER '(' ARGUMENTS ')'

   68 ARGUMENTS: ARGUMENTS ',' EXPR
   69          | EXPR

   70 IF_ELSE_SWITCH: IF '(' EXPR ')' BLOCK
   71               | IF '(' EXPR ')' BLOCK ELSE BLOCK
   72               | EXPR '?' BLOCK ':' BLOCK
   73               | SWITCH '(' EXPR ')' SWITCH_BLOCK

   74 CASES: CASE EXPR ':' BODY
   75      | DEFAULT ':' BODY

   76 SWITCH_BLOCK: '{' SWITCH_BODY '}'

   77 SWITCH_BODY: CASES SWITCH_BODY
   78            | CASES

   79 LOOP: FOR '(' DECLARATION ';' EXPR ';' DECLARATION ')' BLOCK
   80     | WHILE '(' EXPR ')' BLOCK
   81     | DO BLOCK WHILE '(' EXPR ')' ';'

   82 DATA_TYPES: INT
   83           | LONG
   84           | CHAR
   85           | SHORT
   86           | SIGNED
   87           | UNSIGNED
   88           | FLOAT
   89           | DOUBLE
   90           | VOID


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 38
    '&' (38) 49
    '(' (40) 5 6 7 8 64 66 67 70 71 73 79 80 81
    ')' (41) 5 6 7 8 64 66 67 70 71 73 79 80 81
    '*' (42) 59
    '+' (43) 28
    ',' (44) 9 68
    '-' (45) 29 62
    '/' (47) 60
    ':' (58) 72 74 75
    ';' (59) 5 6 15 16 79 81
    '<' (60) 31
    '=' (61) 23 25
    '>' (62) 30
    '?' (63) 72
    '^' (94) 51
    '{' (123) 11 12 76
    '|' (124) 50
    '}' (125) 11 12 76
    error (256)
    IDENTIFIER <string> (258) 5 6 7 8 23 24 25 65 66 67
    CONSTANT <number> (259) 63
    STRING_LITERAL <string> (260)
    SIZEOF (261)
    PTR_OP (262)
    INC_OP (263) 54 55
    DEC_OP (264) 56 57
    LEFT_OP (265) 53
    RIGHT_OP (266) 52
    LE_OP (267) 35
    GE_OP (268) 34
    EQ_OP (269) 33
    NE_OP (270) 32
    AND_OP (271) 37
    OR_OP (272) 36
    MUL_ASSIGN (273) 43
    DIV_ASSIGN (274) 44
    MOD_ASSIGN (275) 45
    ADD_ASSIGN (276) 41
    SUB_ASSIGN (277) 42
    LEFT_ASSIGN (278) 40
    RIGHT_ASSIGN (279) 39
    AND_ASSIGN (280) 46
    XOR_ASSIGN (281) 47
    OR_ASSIGN (282) 48
    TYPE_NAME (283)
    TYPEDEF (284)
    EXTERN (285)
    STATIC (286)
    AUTO (287)
    REGISTER (288)
    CHAR (289) 84
    SHORT (290) 85
    INT (291) 82
    LONG (292) 83
    SIGNED (293) 86
    UNSIGNED (294) 87
    FLOAT (295) 88
    DOUBLE (296) 89
    VOLATILE (297)
    VOID (298) 90
    STRUCT (299)
    UNION (300)
    ENUM (301)
    ELLIPSIS (302)
    CASE (303) 74
    DEFAULT (304) 75
    IF (305) 70 71
    ELSE (306) 71
    SWITCH (307) 73
    WHILE (308) 80 81
    DO (309) 81
    FOR (310) 79
    GOTO (311)
    CONTINUE (312) 21
    BREAK (313) 22
    RETURN (314) 19 20


Nonterminals, with rules where they appear

    $accept (79)
        on left: 0
    ROOT (80)
        on left: 1
        on right: 0
    OUTPUT <node> (81)
        on left: 2
        on right: 1
    HEADS <branch> (82)
        on left: 3 4
        on right: 2 3
    HEAD <node> (83)
        on left: 5 6 7 8
        on right: 3 4
    PARAMETER <branch> (84)
        on left: 9 10
        on right: 6 8 9
    BLOCK <node> (85)
        on left: 11 12
        on right: 7 8 70 71 72 79 80 81
    BODY <branch> (86)
        on left: 13 14
        on right: 11 13 74 75
    LINE <node> (87)
        on left: 15 16 17 18
        on right: 13 14
    STATEMENT <node> (88)
        on left: 19 20 21 22
        on right: 15
    DECLARATION <node> (89)
        on left: 23 24 25 26
        on right: 9 10 16 79
    EXPR <node> (90)
        on left: 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
        on right: 19 23 25 26 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 64 68 69 70 71 72 73 74 79 80 81
    TERM <node> (91)
        on left: 58 59 60
        on right: 27 59 60
    UNARY <node> (92)
        on left: 61 62
        on right: 58
    FACTOR <node> (93)
        on left: 63 64 65 66 67
        on right: 61 62
    ARGUMENTS <branch> (94)
        on left: 68 69
        on right: 67 68
    IF_ELSE_SWITCH <node> (95)
        on left: 70 71 72 73
        on right: 17
    CASES <node> (96)
        on left: 74 75
        on right: 77 78
    SWITCH_BLOCK <node> (97)
        on left: 76
        on right: 73
    SWITCH_BODY <branch> (98)
        on left: 77 78
        on right: 76 77
    LOOP <node> (99)
        on left: 79 80 81
        on right: 18
    DATA_TYPES <node> (100)
        on left: 82 83 84 85 86 87 88 89 90
        on right: 5 6 7 8 24 25


State 0

    0 $accept: . ROOT $end

    CHAR      shift, and go to state 1
    SHORT     shift, and go to state 2
    INT       shift, and go to state 3
    LONG      shift, and go to state 4
    SIGNED    shift, and go to state 5
    UNSIGNED  shift, and go to state 6
    FLOAT     shift, and go to state 7
    DOUBLE    shift, and go to state 8
    VOID      shift, and go to state 9

    ROOT        go to state 10
    OUTPUT      go to state 11
    HEADS       go to state 12
    HEAD        go to state 13
    DATA_TYPES  go to state 14


State 1

   84 DATA_TYPES: CHAR .

    $default  reduce using rule 84 (DATA_TYPES)


State 2

   85 DATA_TYPES: SHORT .

    $default  reduce using rule 85 (DATA_TYPES)


State 3

   82 DATA_TYPES: INT .

    $default  reduce using rule 82 (DATA_TYPES)


State 4

   83 DATA_TYPES: LONG .

    $default  reduce using rule 83 (DATA_TYPES)


State 5

   86 DATA_TYPES: SIGNED .

    $default  reduce using rule 86 (DATA_TYPES)


State 6

   87 DATA_TYPES: UNSIGNED .

    $default  reduce using rule 87 (DATA_TYPES)


State 7

   88 DATA_TYPES: FLOAT .

    $default  reduce using rule 88 (DATA_TYPES)


State 8

   89 DATA_TYPES: DOUBLE .

    $default  reduce using rule 89 (DATA_TYPES)


State 9

   90 DATA_TYPES: VOID .

    $default  reduce using rule 90 (DATA_TYPES)


State 10

    0 $accept: ROOT . $end

    $end  shift, and go to state 15


State 11

    1 ROOT: OUTPUT .

    $default  reduce using rule 1 (ROOT)


State 12

    2 OUTPUT: HEADS .
    3 HEADS: HEADS . HEAD

    CHAR      shift, and go to state 1
    SHORT     shift, and go to state 2
    INT       shift, and go to state 3
    LONG      shift, and go to state 4
    SIGNED    shift, and go to state 5
    UNSIGNED  shift, and go to state 6
    FLOAT     shift, and go to state 7
    DOUBLE    shift, and go to state 8
    VOID      shift, and go to state 9

    $default  reduce using rule 2 (OUTPUT)

    HEAD        go to state 16
    DATA_TYPES  go to state 14


State 13

    4 HEADS: HEAD .

    $default  reduce using rule 4 (HEADS)


State 14

    5 HEAD: DATA_TYPES . IDENTIFIER '(' ')' ';'
    6     | DATA_TYPES . IDENTIFIER '(' PARAMETER ')' ';'
    7     | DATA_TYPES . IDENTIFIER '(' ')' BLOCK
    8     | DATA_TYPES . IDENTIFIER '(' PARAMETER ')' BLOCK

    IDENTIFIER  shift, and go to state 17


State 15

    0 $accept: ROOT $end .

    $default  accept


State 16

    3 HEADS: HEADS HEAD .

    $default  reduce using rule 3 (HEADS)


State 17

    5 HEAD: DATA_TYPES IDENTIFIER . '(' ')' ';'
    6     | DATA_TYPES IDENTIFIER . '(' PARAMETER ')' ';'
    7     | DATA_TYPES IDENTIFIER . '(' ')' BLOCK
    8     | DATA_TYPES IDENTIFIER . '(' PARAMETER ')' BLOCK

    '('  shift, and go to state 18


State 18

    5 HEAD: DATA_TYPES IDENTIFIER '(' . ')' ';'
    6     | DATA_TYPES IDENTIFIER '(' . PARAMETER ')' ';'
    7     | DATA_TYPES IDENTIFIER '(' . ')' BLOCK
    8     | DATA_TYPES IDENTIFIER '(' . PARAMETER ')' BLOCK
